# ChangeLog for net-libs/libpcap
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.36 2005/05/06 13:43:50 flameeyes Exp $

  06 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  libpcap-0.8.3-r1.ebuild:
  Check for BSD systems using USERLAND variable.

  06 May 2005; Aaron Walker <ka0ttic@gentoo.org> libpcap-0.8.3-r1.ebuild:
  Install pcap-int.h on fbsd.

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> libpcap-0.8.3-r1.ebuild:
  new PROVIDE - virtual/libpcap

  22 Jan 2005; Daniel Black <dragonheart@gentoo.org> -libpcap-0.7.2-r1.ebuild,
  -libpcap-0.7.2.ebuild, -libpcap-0.8.1-r1.ebuild, -libpcap-0.8.1.ebuild,
  libpcap-0.8.3-r1.ebuild, -libpcap-0.8.3.ebuild:
  QA fix using toolchain-funcs for gcc. Removed old versions

  19 Jan 2005; Daniel Black <dragonheart@gentoo.org> libpcap-0.8.3-r1.ebuild:
  Corrected for multilib as per bug #78534. Thanks to Kevin Koltzau
  <kevin@plop.org>

  17 Jul 2004; Tom Gall <tgall@gentoo.org> libpcap-0.8.3-r1.ebuild:
  stable on ppc64, bug #56911

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libpcap-0.7.2-r1.ebuild, libpcap-0.7.2.ebuild, libpcap-0.8.1-r1.ebuild,
  libpcap-0.8.1.ebuild, libpcap-0.8.3-r1.ebuild, libpcap-0.8.3.ebuild:
  virtual/glibc -> virtual/libc

  04 Apr 2004; Aron Griffis <agriffis@gentoo.org> libpcap-0.8.3-r1.ebuild:
  Mark stable on alpha and ia64 for bug 46258

  04 Apr 2004; Jon Portnoy <avenj@gentoo.org> libpcap-0.8.3-r1.ebuild :
  Stable on AMD64

  03 Apr 2004; Jason Wever <weeve@gentoo.org> libpcap-0.8.3-r1.ebuild:
  Stable on sparc wrt bug #46258.

  03 Apr 2004; <solar@gentoo.org> libpcap-0.8.3-r1.ebuild:
  stable on x86

  03 Apr 2004; Lars Weiler <pylon@gentoo.org> libpcap-0.8.3-r1.ebuild:
  stable on ppc as requested in bug #46258

*libpcap-0.8.3-r1 (31 Mar 2004)

  31 Mar 2004; <solar@gentoo.org> libpcap-0.8.3-r1.ebuild: